--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,9 +2,12 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 
+
+
+
 body, html 
   margin: 0px
   height: 100%
   width: 100%
-  overflow: hidden;
+  overflow-x: hidden !important;
 
