--- a/src/app/navigator/navigator.component.sass
+++ b/src/app/navigator/navigator.component.sass
@@ -1,3 +1,6 @@
+$backdrop-gray: 100
+  
+  
 .sidenav-container 
   height: 100%;
 
@@ -34,13 +37,26 @@
   z-index: 100;
 
 
-// .sidenav-overlay
-  // position: fixed;
-  // left: 0px;
-  // top: 0px;
-  // width: 100vw;
-  // height: 100%;
-  // background-color: rgba(0,0,0,0.1)
+.sidenav-overlay
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100vw;
+  height: 100%;
+  background-color: rgba($backdrop-gray,$backdrop-gray,$backdrop-gray,0.6);
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0s linear 0s, opacity 1.5s;
+  
+  
+
+.my-fadeOut
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 1.5s, opacity 1.5s;
+
+.my-fadeIn
+
 
 
 .mat-drawer-shown
@@ -48,3 +64,10 @@
 
 .mat-drawer-backdrop
     visibility: hidden !important;
+
+
+// .mytransition
+//   height: 22px
+//   transition-duration:0.4s
+  // transition-timing-function: cubic-bezier(0.25,0.8,0.25,1);
+  // transition-property: background-color,visibility;
