--- a/src/app/navigator/navigator.component.html
+++ b/src/app/navigator/navigator.component.html
@@ -12,7 +12,7 @@
   
 
   <mat-nav-list *ngFor="let t of textNavigation">
-      <a mat-list-item href="#">{{t[1]}}</a>
+      <a mat-list-item  [routerLink]="t[0]" href="#">{{t[1]}}</a>
   </mat-nav-list>
 
   </mat-drawer>
@@ -29,6 +29,11 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>Buteko</span> 
+        |
+      <mat-nav-list *ngFor="let t of textNavigation">
+        <a mat-list-item [routerLink]="t[0]" href="#">{{t[1]}}</a>
+      </mat-nav-list>
+
       <btk-language-selector class="language"></btk-language-selector>
 
 
@@ -37,16 +42,25 @@
     <!-- <btk-dashboard></btk-dashboard> -->
     
 
+
+    <img src="assets/icons/x-flag-ptbr.svg" alt="flag">
+    <!-- <img style="z-index:20"  src="assets/icons/x-flag-ptbr.svg" alt="flag"> -->
+    <!-- <img src="assets/icons/x-flag-ptbr.svg" alt="flag">
+    <img src="assets/icons/x-flag-ptbr.svg" alt="flag"> -->
+    <div class="my-content-frame-out">
+      <div class="my-content-frame">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+
+    
     <div 
       #backDrop 
       class="sidenav-overlay" 
       (click)="drawer.close()"
       [ngClass]="{'my-fadeOut': !isDrawerOpen }"    
     ></div>
-    <img src="assets/icons/x-flag-ptbr.svg" alt="flag">
-    <img style="z-index:20"  src="assets/icons/x-flag-ptbr.svg" alt="flag">
-    <!-- <img src="assets/icons/x-flag-ptbr.svg" alt="flag">
-    <img src="assets/icons/x-flag-ptbr.svg" alt="flag"> -->
+
   </mat-drawer-content>
 
 </mat-drawer-container>
