--- a/src/app/navigator/navigator.component.html
+++ b/src/app/navigator/navigator.component.html
@@ -1,46 +1,49 @@
+<mat-drawer-container (window:resize)="onResize($event)" class="sidenav-container" [hasBackdrop]="false">
+  <mat-drawer *ngIf="isSmallScreen" #drawer [opened]="false" class="sidenav" (openedChange)="this.drawerChanged($event)">
+    <mat-toolbar class="toolbar  my-toolbar-drawer" color="primary">
 
-<mat-drawer-container 
-  class="sidenav-container"
-  [hasBackdrop]="false"
->
-  <mat-drawer
-  #drawer
-  [opened]="false"
-  class="sidenav"
-  (openedChange)="this.drawerChanged($event)"
->
-  
+      <!-- <button mat-fab mat-icon-button>Basic</button> -->
+      <button #drawerCloseButton mat-icon-button class="menu-button-drawer" type="button" (click)="drawer.toggle()">
+        <mat-icon>arrow_back_ios</mat-icon>
+      </button>
 
-  <mat-nav-list *ngFor="let t of textNavigation">
-      <a mat-list-item  [routerLink]="t[0]" href="#">{{t[1]}}</a>
-  </mat-nav-list>
 
+    </mat-toolbar>
+    <mat-nav-list class="drawer-options" *ngFor="let t of textNavigation">
+      <a mat-list-item [routerLink]="t[0]" href="#">{{t[1]}}</a>
+    </mat-nav-list>
+   
   </mat-drawer>
   <mat-drawer-content>
-    <mat-toolbar  class="toolbar my-toolbar" color="primary"> 
-    
+    <mat-toolbar class="toolbar my-toolbar" color="primary">
 
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        >
+
+      <button  #drawerOpenButton *ngIf="isSmallScreen" class="menu-button" type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Buteko</span> 
+      <div *ngIf="!isSmallScreen" #toolbarContent class="toolbar-content">
+        <span>Buteko</span>
         |
-      <mat-nav-list *ngFor="let t of textNavigation">
-        <a mat-list-item [routerLink]="t[0]" href="#">{{t[1]}}</a>
-      </mat-nav-list>
+        <mat-nav-list *ngFor="let t of textNavigation">
+          <a mat-list-item [routerLink]="t[0]" href="#">{{t[1]}}</a>
+        </mat-nav-list>
 
+      </div>
+
+      <div *ngIf="isSmallScreen" [ngClass]="{'my-fadeOut': isDrawerOpen }" #toolbarContent class="toolbar-content-mini transition">
+
+          
+          <mat-nav-list *ngFor="let t of [textNavigation[0],textNavigation[1],textNavigation[2]]">
+            <a mat-list-item [routerLink]="t[0]" href="#">{{t[1]}}</a>
+          </mat-nav-list>
+  
+        </div>
       <btk-language-selector class="language"></btk-language-selector>
-
 
     </mat-toolbar>
     <!-- Add Content Here -->
     <!-- <btk-dashboard></btk-dashboard> -->
-    
+
 
 
     <img src="assets/icons/x-flag-ptbr.svg" alt="flag">
@@ -53,15 +56,9 @@
       </div>
     </div>
 
-    
-    <div 
-      #backDrop 
-      class="sidenav-overlay" 
-      (click)="drawer.close()"
-      [ngClass]="{'my-fadeOut': !isDrawerOpen }"    
-    ></div>
+
+    <div #backDrop *ngIf="isSmallScreen" class="sidenav-overlay transition" (click)="drawer.close()" [ngClass]="{'my-fadeOut': !isDrawerOpen }"></div>
 
   </mat-drawer-content>
 
 </mat-drawer-container>
-
