--- a/src/app/views/foods/foods.component.html
+++ b/src/app/views/foods/foods.component.html
@@ -1,3 +1,7 @@
-<p>
-  foods works!
-</p>
+
+<btk-grid
+  [cards]="cards"
+  [deck]="cardDeck"
+  [language]="lang"
+  [isTiny]="isScreenTiny"
+></btk-grid>
