--- a/src/app/views/news/news.component.html
+++ b/src/app/views/news/news.component.html
@@ -1,3 +1,10 @@
 <p>
   news works!
 </p>
+<!-- <angular-popper>
+    <div class="target-block border border-primary">
+      Target
+    </div>
+   
+    <div content>Popper content</div>
+  </angular-popper> -->
