--- a/src/app/navigator/navigator.component.sass
+++ b/src/app/navigator/navigator.component.sass
@@ -1,5 +1,5 @@
 $backdrop-gray: 100
-  
+$bd-fade-time: 0.6s
   
 .sidenav-container 
   height: 100%;
@@ -28,7 +28,17 @@ $backdrop-gray: 100
 
  
 
+.my-drawer-content
+  position: relative;
+  top: 0px
+  left: 0px 
+  width: calc(100% + 25px)
+  // width: 100%
+  overflow-x: hidden;
+  overflow-y: scroll; 
+  
 
+  // height: 3000px
 
 
 .my-toolbar 
@@ -57,13 +67,13 @@ $backdrop-gray: 100
 .transition
   visibility: visible
   opacity: 1
-  transition: visibility 0s linear 0s, opacity 1.5s;
+  transition: visibility 0s linear 0s, opacity $bd-fade-time;
 
 
 .my-fadeOut
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0s linear 1.5s, opacity 1.5s;
+  transition: visibility $bd-fade-time linear $bd-fade-time, opacity $bd-fade-time;
 
 .my-fadeIn
 
@@ -82,9 +92,9 @@ $backdrop-gray: 100
   background-color: rgba(200,211,0,0.3)
   position: absolute;
   top: 5rem;
-
+  // transform: translateX(-0.1rem)
   width: 100%;
-  height: 50vw;
+  // height: 50vw;
   text-align: center;
 
 .my-content-frame
@@ -93,9 +103,11 @@ $backdrop-gray: 100
   // top: 5rem;
   max-width: 700px
   width: 100vw;
-  height: 50vw;
+  // height: 50vw;
   display: inline-block;
   text-align: left;
+  transform: translateX(-1%);
+
 
 .toolbar-content
   background-color: red
