--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -3,7 +3,7 @@
 </p>
 
 <!-- Photo Grid -->
-<div class="row"> 
+<!-- <div class="row"> 
   <div class="column">
     <img src="https://www.w3schools.com/w3images/wedding.jpg" style="width:100%">
     <img src="https://www.w3schools.com/w3images/rocks.jpg" style="width:100%">
@@ -38,4 +38,7 @@
     <img src="https://www.w3schools.com/w3images/rocks.jpg" style="width:100%">
     <img src="https://www.w3schools.com/w3images/underwater.jpg" style="width:100%">
   </div>
-</div>
+</div> -->
+
+<iframe width="600" height="450" frameborder="0" style="border:0"
+src="https://www.google.com/maps/embed/v1/undefined?origin=...&q=...&destination=...&center=...&zoom=...&key=..." allowfullscreen></iframe>
