--- a/src/app/navigator/navigator.component.sass
+++ b/src/app/navigator/navigator.component.sass
@@ -22,8 +22,8 @@ $bd-fade-time: 0.6s
 
 .language 
   position: absolute;
-  right: 1rem;
-  width: 50px;
+  right: 1.6rem;
+  width: 2.5rem;
   height: 100%;
 
  
@@ -32,7 +32,7 @@ $bd-fade-time: 0.6s
   position: relative;
   top: 0px
   left: 0px 
-  width: calc(100% + 25px)
+  width: calc(100% + 0rem)
   // width: 100%
   overflow-x: hidden;
   overflow-y: scroll; 
@@ -42,14 +42,15 @@ $bd-fade-time: 0.6s
 
 
 .my-toolbar 
-  background-color: rgba(0,0,0,0.3)
+  background-color: rgba(255, 190, 40,0.95)
   position: fixed;
   top: 0px;
   z-index: 100;
 
+
 .my-toolbar-drawer
-    background-color: rgba(100, 100, 100, 0.9)
-    z-index: 100
+  z-index: 100
+  background-color: rgba(255, 190, 40,0.95)
 
 
 
@@ -60,6 +61,7 @@ $bd-fade-time: 0.6s
   width: 100vw;
   height: 100%;
   background-color: rgba($backdrop-gray,$backdrop-gray,$backdrop-gray,0.6);
+  filter: blur(1.1rem)
   // visibility: visible;
   // opacity: 1;
   // transition: visibility 0s linear 0s, opacity 1.5s;
@@ -89,7 +91,7 @@ $bd-fade-time: 0.6s
 
   
 .my-content-frame-out
-  background-color: rgba(200,211,0,0.3)
+  // background-color: rgba(200,211,0,0.3)
   position: absolute;
   top: 5rem;
   // transform: translateX(-0.1rem)
@@ -98,10 +100,10 @@ $bd-fade-time: 0.6s
   text-align: center;
 
 .my-content-frame
-  background-color: rgba(200,0,0,0.3)
+  // background-color: rgba(200,0,0,0.3)
   position: relative;
   // top: 5rem;
-  max-width: 700px
+  max-width: 38rem
   width: 100vw;
   // height: 50vw;
   display: inline-block;
@@ -110,7 +112,7 @@ $bd-fade-time: 0.6s
 
 
 .toolbar-content
-  background-color: red
+  // background-color: red
   max-width: 700px
   width: 100vw  
   height: 100%
@@ -124,7 +126,7 @@ $bd-fade-time: 0.6s
 
 
 .toolbar-content-mini
-  background-color: blue
+  // background-color: blue
   width: 60vw  
   height: 100%
   display: flex;
@@ -141,3 +143,43 @@ $bd-fade-time: 0.6s
 .drawer-options
   position: relative
   top: 0rem
+
+
+// .toolbar-shader
+  // background: -moz-linear-gradient(top, rgba(132,127,66,1) 0%, rgba(196,197,105,0.58) 100%); /* FF3.6-15 */
+  // background: -webkit-linear-gradient(top, rgba(132,127,66,1) 0%,rgba(196,197,105,0.58) 100%); /* Chrome10-25,Safari5.1-6 */
+  // background: linear-gradient(to bottom, rgba(132,127,66,1) 0%,rgba(196,197,105,0.58) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#847f42', endColorstr='#94c4c569',GradientType=0 ); /* IE6-9 */
+
+
+.logo-img
+  position: relative
+  top: 20%;
+  width: 100%
+  height: 60%
+
+.logo-img-container
+  position: relative
+  width: 10rem
+  height: 3.5rem
+  // background-color: rgba(200,0,0,0.3)
+
+
+.logo-img-container-main
+  // position: 
+  left: -20%
+
+
+.background-img-container
+  position: fixed
+  left: -50%
+  width: 200%
+  height: 200%
+
+  background-color: rgba(200,0,0,0.3)
+  // filter: blur(3px) grayscale(100%) brightness(50%);
+  filter: brightness(300%) blur(0.5rem) grayscale(90%);
+
+
+.background-img  
+  width: 100%
